--- a/bootstra/bot1.html
+++ b/bootstra/bot1.html
@@ -24,6 +24,7 @@
       // fugit nobis temporibus itaque ut, quidem id explicabo cumque nam magni
       perspiciatis, at, quae facilis ad facere error corporis voluptatibus?
     </h1>
+    <p>adding para from git hub</p>
     
   </body>
 </html>
